# lib_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Rename.py
.github/workflows/: Benchmark.yml  Sanitizers.yml
cmake/: flags_and_options.cmake  installation_setup.cmake  library_setup.cmake
cmake/detection/: CMakeLists.txt  lt_cpu_properties.hpp.in  lt_detect_cpu_properties.cmake  main.cpp
include/: lib_template
include/lt-incl/: config.hpp  lt_cpu_properties.hpp
src/benchmarks/: CMakeLists.txt  lib_template.cpp
src/unit-tests/: CMakeLists.txt
